--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="/item/prd/styles/usage/app.scss"/>
+		<link rel="stylesheet" type="text/css" href="/item/prd/styles/usage/app@ab1736501372871b1e94471897dc7ac4.css"/>
 	</head>
 	<body>	
+	<div></div>
 	</body>
-	<script src="/item/prd/scripts/app.js"></script>
+	<script src="/item/prd/scripts/app@6b25480bb7421801eb2003b4c892afb0.js"></script>
 </html>
